versioned_docs/version-5.0/document-extensions/counters/content/_indexing-csharp.mdx
import Admonition from '@theme/Admonition';
import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';
import CodeBlock from '@theme/CodeBlock';

<Admonition type="note" title="">

* To index counters, create a [static index](../../../indexes/creating-and-deploying.mdx#static-indexes) 
that inherits from `AbstractCountersIndexCreationTask`.  

* Auto-indexes for counters are not available at this time.  

* In this page:  
  * [Syntax](../../../document-extensions/counters/indexing.mdx#syntax)  
  * [Querying the Index](../../../document-extensions/counters/indexing.mdx#querying-the-index)  

</Admonition>
## Syntax

In order to index counter values, create an index that inherits from `AbstractCountersIndexCreationTask`. 
Next, choose one of these two methods which take the index expression:  

<TabItem value="csharp" label="csharp">
<CodeBlock language="csharp">
{`protected void AddMapForAll(Expression<Func<IEnumerable<CounterEntry>, IEnumerable>> map)

protected void AddMap(string counter, Expression<Func<IEnumerable<CounterEntry>, IEnumerable>> map)
`}
</CodeBlock>
</TabItem>

`AddMapForAll` indexes all the counters in the indexed documents. `AddMap` only indexes the counters with 
the specified name.  

Examples of indexes using each method:  

<Tabs groupId='languageSyntax'>
<TabItem value="AddMap" label="AddMap">
<CodeBlock language="csharp">
{`private class MyCounterIndex : AbstractCountersIndexCreationTask<Company>
{
    public MyCounterIndex()
    {
        AddMap("Likes", counters => from counter in counters
                                        select new
                                        {
                                            Likes = counter.Value,
                                            Name = counter.Name,
                                            User = counter.DocumentId
                                        });
    }
}
`}
</CodeBlock>
</TabItem>
<TabItem value="AddMapForAll" label="AddMapForAll">
<CodeBlock language="csharp">
{`private class MyCounterIndex_AllCounters : AbstractCountersIndexCreationTask<Company>
{
    public MyCounterIndex_AllCounters()
    {
        AddMapForAll(counters => from counter in counters
                                 select new
                                 {
                                     Count = counter.Value,
                                     Name = counter.Name,
                                     User = counter.DocumentId
                                 });
    }
}
`}
</CodeBlock>
</TabItem>
</Tabs>  



### `CounterNamesFor`

While indexes inheriting from `AbstractIndexCreationTask` cannot index counter _values_, the `CounterNamesFor` 
method is available which returns the names of all counters for a specified document:  

<TabItem value="syntax" label="syntax">
<CodeBlock language="csharp">
{`IEnumerable<string> CounterNamesFor(object doc);
`}
</CodeBlock>
</TabItem>

Example of index using `CounterNamesFor`:  

<TabItem value="index_0" label="index_0">
<CodeBlock language="csharp">
{`public class Companies_ByCounterNames : AbstractIndexCreationTask<Company>
\{
    public class Result
    \{
        public string[] CounterNames \{ get; set; \}
    \}

    public Companies_ByCounterNames()
    \{
        Map = employees => from e in employees
                           let counterNames = CounterNamesFor(e)
                           select new Result
                           \{
                               CounterNames = counterNames.ToArray()
                           \};
    \}
\}
`}
</CodeBlock>
</TabItem>



## Querying the Index  

<Tabs groupId='languageSyntax'>
<TabItem value="Sync" label="Sync">
<CodeBlock language="csharp">
{`// return all companies that have 'Likes' counter
List<Company> companies = session
    .Query<Companies_ByCounterNames.Result, Companies_ByCounterNames>()
    .Where(x => x.CounterNames.Contains("Likes"))
    .OfType<Company>()
    .ToList();
`}
</CodeBlock>
</TabItem>
<TabItem value="Async" label="Async">
<CodeBlock language="csharp">
{`// return all companies that have 'Likes' counter
List<Company> companies = await asyncSession
    .Query<Companies_ByCounterNames.Result, Companies_ByCounterNames>()
    .Where(x => x.CounterNames.Contains("Likes"))
    .OfType<Company>()
    .ToListAsync();
`}
</CodeBlock>
</TabItem>
<TabItem value="DocumentQuery" label="DocumentQuery">
<CodeBlock language="csharp">
{`// return all companies that have 'Likes' counter
List<Company> companies = session
    .Advanced
    .DocumentQuery<Company, Companies_ByCounterNames>()
    .ContainsAny("CounterNames", new[] { "Likes" })
    .ToList();
`}
</CodeBlock>
</TabItem>
</Tabs>




